@@ -1,3 +1,8 @@
+Tue Feb 16 05:47:57 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-revoke.c: New file.
+	* Makefile (IOSRCS): Add io-revoke.c.
+
 1999-02-12  Gordon Matzigkeit  <gord@trick.fig.org>
 
 	* open.c (trivfs_open): Add missing `=' from last change.
